--- a/experimenten.qmd
+++ b/experimenten.qmd
@@ -133,3 +133,51 @@ hist(z)
 ```
 
 Deze verdeling is meer symmetrisch.
+
+## Personen genereren
+
+Inspiratiebron: Functie create_data_... uit package [explore](https://rolkra.github.io/explore/index.html).
+
+Een voorbeeld van een functie om een aantal personen met bepaalde kenmerken te genereren.
+
+```{r}
+personen <- function (aantal = 1000, add_id = FALSE, seed = 123) {
+	set.seed(seed)
+  randomset <- stats::runif(aantal)
+	data <- data.frame(leeftijd = sample(16:95, aantal, replace = TRUE),
+					   geslacht = sample(c("Man", "Vrouw", "Onbekend"), prob = c(0.49, 0.49, 0.02), aantal, replace = TRUE),
+					   oogkleur = sample(c("Blauw", "Groen", "Bruin"), size = aantal, replace = TRUE),
+					   schoenmaat = trunc(stats::rnorm(aantal, mean = 43, sd = 3)),
+					   iq = trunc(stats::rnorm(aantal, mean = 100, sd = 20)),
+					   opleiding = sample(c(0:100), aantal, replace = TRUE),
+					   inkomen = sample(c(0:100), aantal, replace = TRUE),
+					   handset = sample(c("Apple", "Android", "Anders"), prob = c(0.4, 0.5, 0.1), aantal, replace = TRUE),
+					   huisdier = sample(c("Hond", "Kat", "Anders", "Geen"), prob = c(0.23, 0.22, 0.11, 0.35), aantal, replace = TRUE),
+					   pizza = sample(c("Margherita", "Prosciutto", "Frute di Mare", "Hawai", "Quattro Stagioni", "Tonno"), aantal, replace = TRUE),
+					   ijsje = sample(c("Vanille", "Chocolade", "Aardbei", "Citroen", "Cookie", "Hazelnoot", "Pistache"), prob = c(0.3, 0.2, 0.2, 0.1, 0.1, 0.05, 0.05), aantal, replace = TRUE),
+					   knoflook = as.integer(sample(0:1, aantal, prob = c(0.4, 0.6), replace = TRUE)),
+					   sushi = as.integer(sample(0:1, aantal, prob = c(0.5, 0.5), replace = TRUE)),
+					   beatles = as.integer(sample(0:1, aantal, prob = c(0.6, 0.4), replace = TRUE)),
+					   bier = as.integer(sample(0:1, aantal, prob = c(0.6, 0.4), replace = TRUE)))
+	data$beatles <- ifelse(data$beatles + data$leeftijd/50 * randomset >= 1, 1L, 0L)
+	data$bier <- ifelse(data$geslacht == "Man" & randomset >= 0.2, 1L, data$bier)
+	data$sushi <- ifelse(data$leeftijd/75 + randomset/4 >= 1, 0L, data$sushi)
+	data$schoenmaat <- ifelse(data$geslacht == "Vrouw" & randomset >= 0.3, data$schoenmaat - 1.8, data$schoenmaat)
+	data$inkomen <- ifelse(data$opleiding > 50 & randomset > 0.3, data$inkomen + data$opleiding/2, data$inkomen)
+	data$handset <- ifelse(data$handset == "Android" & data$inkomen > 75 & data$opleiding < 25, "Apple", data$handset)
+	if (add_id) {
+		data <- data |> add_var_id(name = "id")
+	}
+	as.data.frame(data)
+}
+```
+
+Hierbij is
+
+-   huisdier, pizza, ijsje : het favoriete huisdier, pizza, ijsje
+-   knoflook, sushi, beatles, bier : houdt van knoflook, sushi, beatles, bier
+
+```{r}
+mijnpersonen <- personen(aantal = 100)
+```
+
