Correcties ivm gebruik package softwijzer. Aanvulling met Percentieldata en daardoor een wijziging van kwartieldata.

--- a/_setup.qmd
+++ b/_setup.qmd
@@ -6,7 +6,6 @@
 #| message: false
 
 library(tidyverse)
-library(swrtools)
-library(lubridate) # handig bij gebruik datums
+library(softwijzer)
 theme_set(theme_bw())
 ```
