--- a/_setup.qmd
+++ b/_setup.qmd
@@ -1,11 +1,12 @@
 
-```{r setup, include=FALSE}
+```{r}
 #| label: setup
 #| include: false
 #| warning: false
 #| message: false
 
 library(tidyverse)
+library(tinytable)
 library(softwijzer)
 theme_set(theme_bw())
 ```
