--- a/variabelen.qmd
+++ b/variabelen.qmd
@@ -90,11 +90,13 @@ strrep(c("X", "Y", "Z"), 1:3)
 Vaak gebruik ik voor persoonsnamen de dataset `people` uit package `softwijzer`:
 
 ```{r}
+#| label: tbl-kleurpersonen
+#| fig-cap: "Gefingeerde persoonsnamen in dataset people."
 KleurPersonen <- softwijzer::people
-knitr::kable(KleurPersonen)
+tt(KleurPersonen)
 ```
 
-verder bevat package softwijzer ook de datasets `boys` en `girls` met respectievelijk 200 Nederlandstalige jongensnamen en 200 meisjesnamen.
+Verder bevat package softwijzer ook de datasets `boys` en `girls` met respectievelijk 200 Nederlandstalige jongensnamen en 200 meisjesnamen.
 
 ```{r}
 # Jongensnamen
@@ -319,15 +321,18 @@ Syntax: `sample(x, size, replace = FALSE, prob = NULL)`
 -   `replace` - voor met (TRUE) of zonder (FALSE) teruglegging
 -   `prob` - een vector met de kansen voor de onderdelen van x (facultatief). Wanneer deze wordt weggelaten hebben alle onderdelen dezelfde kans.
 
-**Voorbeeld dobbelsteen**
+::: {#exm-dobbelsteen}
+**Dobbelsteen**
 
 ```{r}
 # Vijftig worpen met een 6-kantige dobbelsteen
 worp <- sample(1:6, size = 50, replace = TRUE)
 table(worp)
 ```
+:::
 
-**Voorbeeld oneerlijke munt**
+::: {#exm-oneerlijke-munt}
+**Oneerlijke munt**
 
 Stel dat je nu 100 worpen wilt simuleren met een oneerlijke munt, waarvan de kans op kop 0.7 is en de kans op munt is 0.3. De kop wordt weergegeven met de waarde 1 en de munt met waarde 0.
 
@@ -339,14 +344,19 @@ table(worp)
 worp <- sample(0:1, size = 100, replace = TRUE, prob = c(0.3, 0.7))
 table(worp)
 ```
+:::
 
-**Voorbeeld Lotto (6 uit 49)**
+::: {#exm-lotto}
+**Lotto (6 uit 49)**
 
 ```{r}
-sample(1:49, size = 6, replace = FALSE) %>% sort()
+sample(1:49, size = 6, replace = FALSE) |> 
+  sort()
 ```
+:::
 
-**Voorbeeld letters**
+::: {#exm-letters}
+**Letters**
 
 LETTERS is een voor gedefinieerde variabele, bestaande uit een vector die alle 26 letters van het Engelse alfabet bevat.
 
@@ -354,8 +364,10 @@ LETTERS is een voor gedefinieerde variabele, bestaande uit een vector die alle 2
 # Willekeurig arrangement (permutatie) van 5 letters
 sample(LETTERS, 5)
 ```
+:::
 
-**Voorbeeld ordinale data**
+::: {#exm-ordinale-data}
+**Ordinale data**
 
 ```{r}
 beoordeling <- sample(c("lelijk", "neutraal", "mooi"), size = 50, replace = TRUE)
@@ -366,35 +378,43 @@ table(beoordeling)
 beoordeling <- sample(c("lelijk", "neutraal", "mooi"), size = 500, replace = TRUE, prob = c(0.2, 0.5, 0.3))
 beoordeling <- factor(beoordeling, levels = c("lelijk", "neutraal", "mooi"), ordered = TRUE)
 ```
+:::
 
-**Voorbeeld data frame**
+::: {#exm-dataframe}
+**Dataframe**
 
 Trekking van 5 personen uit de eerder gedefinieerde data frame KleurPersonen. De functie `sample()` wordt hier toegepast op de vector met rijnummers.
 
 ```{r}
 KleurPersonen[sample(nrow(KleurPersonen), size = 5, replace = FALSE), ]
 ```
+:::
 
-**Voorbeeld met kansverdeling**
+::: {#exm-kansverdeling}
+**Kansverdeling**
 
 Trekking van 30 beroepen uit een verzameling \[arts, leraar, politieagent\] waarbij ongeveer de helft uit leraar moet bestaan.
 
 ```{r}
-sample(c("arts", "leraar", "politieagent"), size = 30, replace = TRUE, prob = c(0.25, 0.50, 0.25)) %>% table()
+sample(c("arts", "leraar", "politieagent"), size = 30, replace = TRUE, prob = c(0.25, 0.50, 0.25)) |> 
+  table()
 ```
 
 De getallen in `prob` geven gewichten aan. Ze mogen niet negatief zijn en ook niet allemaal 0. De som hoeft ook niet 1 te zijn. Intern worden de gewichten omgerekend naar kansen. Zo zorgt `prob = c(1, 2, 3)` voor respectievelijke kansen van 1/6, 2/6 en 3/6.
+:::
 
-**Complexer voorbeeld met kansen**
+::: {#exm-complex-kansen}
+**Complexer met kansen**
 
 Bij 200 trekkingen uit de getallen 1 t/m 10 moet ca. 50% uit het getal 7 bestaan. De kansen op de andere getallen zijn allemaal even groot. Ken je nu aan de getallen 1 t/m 6 en 7 t/m 10 een gewicht van 1 toe, dan is de som van deze gewichten 9. Aan het getal 7 moet dan het gewicht 9 toegekend worden. Om te controleren of ongeveer de helft uit 7 bestaat gaat aardig met een staafdiagram.
 
 ```{r}
 set.seed(28)
 trekking <- sample(1:10, size = 200, replace = TRUE, prob = c(rep(1, 6), 9, rep(1, 3)))
-trekking %>% table()
+trekking |> table()
 ggplot(mapping=aes(trekking == 7)) + geom_bar()
 ```
+:::
 
 ## Data frames
 
@@ -475,16 +495,20 @@ Hierbij is
 ### Data zonder verschillen tussen twee groepen
 
 ```{r}
-data.frame(groep = rep(letters[1:2], each = 4),
-           respons = rnorm(n = 8, mean = 6, sd = 2))
+set.seed(123)
+mydata <- data.frame(groep = rep(letters[1:2], each = 4), 
+                     respons = rnorm(n = 8, mean = 6, sd = 2))
+mydata
 ```
 
 En met nog een tweede categorievariabele.
 
 ```{r}
-data.frame(groep = rep(letters[1:2], each = 4),
-           factor = rep(LETTERS[3:6], times = 2),
-           respons = rnorm(n = 8, mean = 6, sd = 2))
+set.seed(123)
+mydata <- data.frame(groep = rep(letters[1:2], each = 4),
+                     factor = rep(LETTERS[3:6], times = 2),
+                     respons = rnorm(n = 8, mean = 6, sd = 2))
+mydata
 ```
 
 ### Data met verschillen tussen twee groepen
@@ -495,8 +519,10 @@ data.frame(groep = rep(letters[1:2], each = 4),
 Je moet hier rekening houden met hoe de functie `rnorm()` werkt met een vector van gemiddelden. De functie trekt achtereenvolgens uit elke verdeling. Dus moet de categorievector als geheel herhaald worden en niet elementsgewijs.
 
 ```{r}
-data.frame(groep = rep(LETTERS[1:2], length.out = 6),
-           respons = rnorm(n = 6, mean = c(5, 10), sd = 1))
+set.seed(123)
+mydata <- data.frame(groep = rep(LETTERS[1:2], length.out = 6),
+                     respons = rnorm(n = 6, mean = c(5, 10), sd = 1))
+mydata
 ```
 
 ### Data met twee kwantitatieve variabelen en twee groepen
@@ -509,9 +535,11 @@ Twee groepen, A en B, met 10 waarnemingen per groep.
 Voor twee groepen met 10 waarnemingen per groep moet je dus 2\*10=20 trekkingen doen.
 
 ```{r}
-data.frame(groep = rep(LETTERS[1:2], each = 10),
-           x = runif(n = 20, min = 10, max = 15),
-           y = runif(n = 20, min = 100, max = 150))
+set.seed(123)
+mydata <- data.frame(groep = rep(LETTERS[1:2], each = 10),
+                     x = runif(n = 20, min = 10, max = 15),
+                     y = runif(n = 20, min = 100, max = 150))
+mydata
 ```
 
 ### Alle combinaties van factor variabelen
@@ -564,7 +592,8 @@ In een tibble / dataframe:
 ```{r}
 x <- tibble(seq(from = ymd("2021-01-01"), to = ymd("2021-06-30"), by = "week"))
 # rij groepering
-y <- x %>% rowwise()
+y <- x |> 
+  rowwise()
 ```
 
 Voor het genereren van willekeurige datums kun je dit combineren met `sample()`
@@ -598,7 +627,7 @@ Soms worden statistische gegevens weergegeven als percentielen. Bijvoorbeeld de 
 #| echo: false
 mydf <- data.frame(percentiel = c(5, 10, 15, 25, 50, 75, 85, 90, 95),
                    lengte = c(163.3, 166.1, 167.9, 170.7, 175.5, 180.8, 183.6, 185.4, 188.2))
-knitr::kable(mydf)
+tt(mydf)
 ```
 
 Door een spline te gebruiken, is het mogelijk om een curve te simuleren die past bij die percentielpunten en vervolgens de functie `predict()` te gebruiken om een representatieve steekproef te maken.
